# Fract-ol

./: .gitignore  CMakeLists.txt  Makefile  README.md  bresenham.c  burning_ship.c  draw_options.c  exo.tar  fractol  fractol.h  init.c  julia.c  key_option.c  main.c  mandelbrot.c  thread_alien  triangle.c
lib_function/: ft_strlen.c
libft/: Makefile  ft_itoa.c
src/: burning_ship.c  draw.c  draw_options.c  fract.c  fractol.h  init.c  julia.c  key.c  key_option.c  lib_functions.c  main.c  mandelbrot.c  mouse.c
src/lib_function/: ft_bzero.c  ft_itoa.c  ft_memset.c
